--- a/wp-content/themes/ftltrade/tailwind/custom/base.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/base.css
@@ -12,9 +12,5 @@
  * editor.
 */
 body {
-	@apply bg-background text-foreground font-sans;
-
-	&.home {
-		background: #fff222;
-	}
+	@apply bg-background font-sans;
 }
