--- a/wp-content/themes/ftltrade/tailwind/custom/file-header.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/file-header.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Grafiduo Starter
+Theme Name: FTL Trade
 Theme URI: https://grafiduo.pl
 Author: Grafiduo
 Author URI: https://underscoretw.com/
@@ -15,9 +15,21 @@ Tags:
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
 
-Grafiduo Starter is based on _tw https://underscoretw.com/, (C) 2021-2023 Greg Sullivan
+FTL Trade is based on _tw https://underscoretw.com/, (C) 2021-2023 Greg Sullivan
 _tw is distributed under the terms of the GNU GPL v2 or later.
 
 _tw is based on Underscores https://underscores.me/ and Varia https://github.com/Automattic/themes/tree/master/varia, (C) 2012-2023 Automattic, Inc.
 Underscores and Varia are distributed under the terms of the GNU GPL v2 or later.
 */
+
+.header--scroll {
+  @apply bg-white;
+}
+
+header nav ul li a {
+  @apply text-white uppercase text-[20px] transition-all;
+}
+
+header nav ul li a:hover {
+  @apply text-green;
+}
