--- a/wp-content/themes/ftltrade/tailwind/custom/components/components.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/components/components.css
@@ -54,3 +54,31 @@
 .entry-content > .alignright {
 	@apply float-right ml-8;
 }
+
+.overlay-grey::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.7);
+  pointer-events: none;
+  z-index: 1;
+	transition: all 0.2s;
+}
+
+.overlay-grey:hover::before {
+	background: none;
+}
+
+.splide__arrow {
+	background: none !important;
+}
+
+	.splide__arrow--prev {
+		@apply md:!-left-16;
+	}
+	.splide__arrow--next {
+  @apply md:!-right-16;
+}
