--- a/wp-content/themes/ftltrade/tailwind/custom/file-header.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/file-header.css
@@ -23,7 +23,11 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
 */
 
 .header--scroll {
-  @apply bg-white;
+  @apply bg-white border-b-0;
+}
+
+.header--scroll .menu-item {
+  @apply !text-blue-100;
 }
 
 header nav ul li a {
