--- a/wp-content/themes/ftltrade/tailwind/custom/components/components.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/components/components.css
@@ -154,3 +154,7 @@ section {
 #splide-ttb .splide__slide.is-active {
   @apply scale-100 max-w-full;
 }
+
+.wysiwyg p {
+  @apply text-base lg:text-[19px] lg:leading-6 mb-5 text-dark;
+}
