--- a/wp-content/themes/ftltrade/tailwind/custom/components/menu.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/components/menu.css
@@ -1,5 +1,9 @@
 .menu-item {
-  @apply mx-[47px] font-bold hover:text-green relative font-Barlow;
+  @apply lg:mx-5 xl:mx-[47px] font-bold hover:text-green relative font-Barlow p-5 lg:p-0 border-b border-b-border lg:border-b-0;
+}
+
+.menu-item a {
+  @apply h-full w-full block;
 }
 
 .menu-item:hover a::before {
@@ -7,21 +11,69 @@
 }
 
 .menu-item a::before {
-  @apply bg-green absolute block w-full left-0 h-[3px];
+  @apply bg-green absolute block w-[3px] lg:w-full left-0 h-full lg:h-[3px] lg:-bottom-[50px] top-0 lg:top-auto lg:transition-transform;
   content: "";
-  bottom: -50px;
   transform: scaleX(0);
-  transition: transform 0.2s ease-out;
 }
 
 .current_page_item a::before {
-  @apply bg-green absolute block w-full left-0 h-[3px];
+  @apply bg-green absolute block w-[3px] lg:w-full left-0 h-full lg:h-[3px] lg:-bottom-[50px] top-0 lg:top-auto;
   content: "";
-  bottom: -50px;
   transform: scaleX(1);
   transition: transform 0.2s ease-out;
 }
 
 .current_page_item a {
   @apply text-green;
+}
+
+.nav-toggle {
+  @apply w-[50px] h-[50px] relative cursor-pointer;
+}
+
+.nav-toggle div {
+    height: 2px;
+    width: 40px;
+    background-color: hsl(0, 0%, 100%);
+    left: 5px;
+    position: absolute;
+    top: 24px;
+    border-radius: 1px;
+    transition: transform 0.2s ease-out;
+}
+
+.nav-toggle div:nth-child(1) {
+  transform: translateY(-10px);
+}
+
+.nav-toggle div:nth-child(3) {
+  transform: translateY(10px);
+}
+
+.nav-content {
+  height: calc(100dvh - 109px);
+  @apply bg-blue top-[109px] sm:top-[130px] right-0 fixed w-[360px] flex flex-col overflow-auto max-w-full;
+  box-shadow: 0 5px 15px 0px rgba(15, 55, 168, 0.18);
+  transform: translateX(calc(100% + 15px));
+  transition: transform 0.2s ease-out;
+}
+
+nav.expanded .nav-content {
+  transform: translateX(0px);
+}
+
+nav.expanded {
+  @apply bg-blue;
+}
+
+nav.expanded .nav-toggle div:nth-child(1) {
+  transform: translateX(0px) rotate(45deg);
+}
+
+.nav.expanded .nav-toggle div:nth-child(2) {
+  transform: scaleX(0);
+}
+
+.nav.expanded .nav-toggle div:nth-child(3) {
+  transform: translateX(0px) rotate(-45deg);
 }
