--- a/wp-content/themes/ftltrade/tailwind/custom/components/slider.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/components/slider.css
@@ -3,6 +3,10 @@
 	background: none !important;
 }
 
+.splide__arrow svg {
+  @apply !w-full !h-full;
+}
+
 	.splide__arrow--prev {
 		@apply md:!-left-16;
 	}
@@ -38,33 +42,6 @@
   }
 }
 
-/* #splide-ttb .splide__slide {
-  transform: scale(0.78);
-  transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-  transform-origin: center;
-  opacity: 0.3;
-}
-
-#splide-ttb .splide__slide.is-active {
-  transform: scale(1);
-  opacity: 1;
-  font-size: 66px;
-}
-
-#splide-ttb .splide__slide.is-visible:nth-child(2) {
-  font-size: 58px;
-}
-
-#splide-ttb .splide__slide.is-visible:nth-child(3) {
-  font-size: 50px;
-  opacity: 0.3;
-}
-
-#splide-ttb .splide__slide.is-visible:nth-child(4) {
-  font-size: 48px;
-  opacity: 0.1;
-} */
-
 #splide-ttb .splide__slide {
   transform: scale(0.78);
   transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
@@ -73,24 +50,20 @@
 }
 
 #splide-ttb .splide__slide.is-active {
-  opacity: 1;
   transform: scale(1);
-  font-size: 66px;
+  @apply !text-[26px] sm:text-[66px] opacity-100;
 }
 
 #splide-ttb .splide__slide.is-secondary {
-  opacity: 0.7;
-  font-size: 58px;
+  @apply text-2xl sm:text-[58px] opacity-70;
 }
 
 #splide-ttb .splide__slide.is-tertiary {
-  opacity: 0.4;
-  font-size: 50px;
+  @apply text-2xl sm:text-[50px] opacity-40;
 }
 
 #splide-ttb .splide__slide.is-last {
-  opacity: 0.2;
-  font-size: 48px;
+  @apply text-xl sm:text-[48px] opacity-20;
 }
 
 
