--- a/wp-content/themes/ftltrade/tailwind/custom/file-header.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/file-header.css
@@ -23,7 +23,7 @@ Underscores and Varia are distributed under the terms of the GNU GPL v2 or later
 */
 
 .header--scroll {
-  @apply bg-white;
+  @apply !bg-white;
 }
 
 .header--scroll svg path {
