--- a/wp-content/themes/ftltrade/tailwind/custom/components/components.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/components/components.css
@@ -92,3 +92,7 @@ section {
 .wysiwyg p {
   @apply text-base lg:text-[19px] lg:leading-6 mb-5 text-dark;
 }
+
+iframe {
+  @apply h-[400px] sm:h-[650px] grayscale hover:grayscale-0 transition-all;
+}
