--- a/wp-content/themes/ftltrade/tailwind/custom/components/menu.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/components/menu.css
@@ -11,13 +11,13 @@
 }
 
 .menu-item a::before {
-  @apply bg-green absolute block w-[3px] lg:w-full left-0 h-full lg:h-[3px] lg:-bottom-[50px] top-0 lg:top-auto lg:transition-transform;
+  @apply bg-green absolute block w-[3px] lg:w-full left-0 h-full lg:h-[3px] lg:-bottom-[46px] top-0 lg:top-auto lg:transition-transform;
   content: "";
   transform: scaleX(0);
 }
 
 .current_page_item a::before {
-  @apply bg-green absolute block w-[3px] lg:w-full left-0 h-full lg:h-[3px] lg:-bottom-[50px] top-0 lg:top-auto;
+  @apply bg-green absolute block w-[3px] lg:w-full left-0 h-full lg:h-[3px] lg:-bottom-[46px] top-0 lg:top-auto;
   content: "";
   transform: scaleX(1);
   transition: transform 0.2s ease-out;
@@ -29,6 +29,10 @@
 
 .nav-toggle {
   @apply w-[50px] h-[50px] relative cursor-pointer;
+}
+
+.header--scroll .nav-toggle div {
+  @apply bg-blue;
 }
 
 .nav-toggle div {
@@ -51,8 +55,8 @@
 }
 
 .nav-content {
-  height: calc(100dvh - 109px);
-  @apply bg-blue top-[109px] sm:top-[130px] right-0 fixed w-[360px] flex flex-col overflow-auto max-w-full;
+  height: calc(100dvh - 130px);
+  @apply bg-blue top-[130px] right-0 fixed w-[360px] flex flex-col overflow-auto max-w-full;
   box-shadow: 0 5px 15px 0px rgba(15, 55, 168, 0.18);
   transform: translateX(calc(100% + 15px));
   transition: transform 0.2s ease-out;
