--- a/wp-content/themes/ftltrade/tailwind/custom/fonts.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/fonts.css
@@ -14,6 +14,7 @@
    font-family: 'Barlow';
    font-weight: 300;
    font-style: normal;
+   display: swap;
   src: url('./fonts/Barlow-Light.ttf') format('truetype'),
       url('./fonts/Barlow-Light.otf') format('opentype'); }
 
@@ -22,6 +23,7 @@
    font-family: 'Barlow';
    font-weight: 400;
    font-style: normal;
+   display: swap;
    src: url('./fonts/Barlow-Regular.ttf') format('truetype'),
       url('./fonts/Barlow-Regular.otf') format('opentype');
  }
@@ -31,6 +33,7 @@
    font-family: 'Barlow';
    font-weight: 700;
    font-style: normal;
+  display: swap;
    src: url('./fonts/Barlow-Bold.ttf') format('truetype'),
     url('./fonts/Barlow-Bold.otf') format('opentype');
  }
