--- a/wp-content/themes/ftltrade/tailwind/custom/file-header.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/file-header.css
@@ -1,9 +1,7 @@
 /*!
 Theme Name: FTL Trade
-Theme URI: https://grafiduo.pl
-Author: Grafiduo
-Author URI: https://underscoretw.com/
-Description: This is a starter tailwind theme from Grafiduo
+Author: Anna Pawlik
+Description: This is a starter tailwind theme for FTL Trade
 Version: 0.1.0
 Tested up to: 6.2
 Requires PHP: 7.4
