--- a/wp-content/themes/ftltrade/tailwind/custom/components/hero.css
+++ b/wp-content/themes/ftltrade/tailwind/custom/components/hero.css
@@ -8,9 +8,5 @@
 
 .hero--custom {
   background-position: 0 -70px !important;
-  @apply sm:!bg-top;
-}
-
-.hero--top {
-  background-position: 0 -60px !important;
+  @apply sm:!bg-top bg-cover;
 }
